<resources>
    <string name="app_name">UnitConverterApp</string>

    <string name="buttonChangeUnitsToLength">Length</string>
    <string name="buttonChangeUnitsToWeight">Weight</string>
    <string name="buttonChangeUnitsToTemperature">Temp.</string>

    <string name="stringTextViewConvert">Convert:</string>
    <string name="stringTextViewTo">to</string>
    <string name="stringEditTextNumberDecimal">input number here</string>
    <string name="stringButtonConvert">CONVERT</string>

    <string name="urlAd">https://en.wikipedia.org/wiki/Yeah!_You_Want_%22Those_Games,%22_Right%3F_So_Here_You_Go!_Now,_Let%27s_See_You_Clear_Them!</string>

    <string name="errorEmptyInput">Need something to convert!</string>
    <string name="errorInvalidUnit">Error with unit conversion!</string>
</resources>